<resources>
    <string name="app_name">Registro-login</string>
    <string name="registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetir_contrasena">Repetir contraseña</string>
    <string name="ya_tienes_cuenta_inicia_sesion">Ya tienes cuenta? Inicia sesión</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="sin_cuenta_registrate">Sin cuenta? Registrate</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
</resources>